Add model Restaurant (and sorted methods) and User.

--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <java.version>17</java.version>
     </properties>
 
+                    <!--maven-compiler-plugin-->
     <build>
         <finalName>vote</finalName>
         <defaultGoal>install</defaultGoal>
