--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,10 @@
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <java.version>17</java.version>
+
+                        <!--Library versions-->
+        <slf4j.version>2.0.0-alpha5</slf4j.version>
+        <logback.version>1.3.0-alpha10</logback.version>
     </properties>
 
                     <!--maven-compiler-plugin-->
@@ -34,5 +38,23 @@
             </plugin>
         </plugins>
     </build>
+
+    <dependencies>
+        <!-- Logging with SLF4J & LogBack -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${slf4j.version}</version>
+            <scope>compile</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>${logback.version}</version>
+            <scope>runtime</scope>
+        </dependency>
+
+    </dependencies>
 
 </project>
