--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
         <logback.version>1.3.0-alpha10</logback.version>
     </properties>
 
-                    <!--maven-compiler-plugin-->
+                        <!--maven-compiler-plugin-->
     <build>
         <finalName>vote</finalName>
         <defaultGoal>install</defaultGoal>
@@ -40,7 +40,8 @@
     </build>
 
     <dependencies>
-        <!-- Logging with SLF4J & LogBack -->
+
+                <!-- Logging with SLF4J & LogBack -->
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
@@ -53,6 +54,21 @@
             <artifactId>logback-classic</artifactId>
             <version>${logback.version}</version>
             <scope>runtime</scope>
+        </dependency>
+
+                            <!--Web-->
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>4.0.1</version>
+            <scope>provided</scope>
+        </dependency>
+
+                            <!--JSP-->
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>jstl</artifactId>
+            <version>1.2</version>
         </dependency>
 
     </dependencies>
