--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,9 @@
                         <!--Library versions-->
         <slf4j.version>2.0.0-alpha5</slf4j.version>
         <logback.version>1.3.0-alpha10</logback.version>
+        <servlet-api.version>4.0.1</servlet-api.version>
+        <jstl.version>1.2</jstl.version>
+        <spring.version>5.3.13</spring.version>
     </properties>
 
 
@@ -71,7 +74,7 @@
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
-            <version>4.0.1</version>
+            <version>${servlet-api.version}</version>
             <scope>provided</scope>
         </dependency>
 
@@ -79,8 +82,16 @@
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>jstl</artifactId>
-            <version>1.2</version>
+            <version>${jstl.version}</version>
         </dependency>
+
+                        <!-- Spring-context -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+
 
     </dependencies>
 
