--- a/pom.xml
+++ b/pom.xml
@@ -101,10 +101,16 @@
             <version>${jstl.version}</version>
         </dependency>
 
-                        <!-- Spring-context -->
+                        <!-- Spring -->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
             <version>${spring.version}</version>
         </dependency>
 
