--- a/pom.xml
+++ b/pom.xml
@@ -19,14 +19,25 @@
         <java.version>17</java.version>
 
                         <!--Library versions-->
+        <!--    Logging  -->
         <slf4j.version>2.0.0-alpha5</slf4j.version>
         <logback.version>1.3.0-alpha10</logback.version>
+        <!--    Servlet  -->
         <servlet-api.version>4.0.1</servlet-api.version>
+        <!--    JSP  -->
         <jstl.version>1.2</jstl.version>
+        <!--    Spring  -->
         <spring.version>5.3.13</spring.version>
+        <!--    Tests  -->
         <junit.version>4.13.2</junit.version>
         <assertj.version>3.21.0</assertj.version>
+        <!--    DB  -->
         <postgresql.version>42.3.1</postgresql.version>
+        <hsqldb.version>2.6.1</hsqldb.version>
+        <!-- Hibernate -->
+        <hibernate.version>5.6.2.Final</hibernate.version>
+        <hibernate-validator.version>7.0.1.Final</hibernate-validator.version>
+        <javax-el.version>3.0.1-b12</javax-el.version>
     </properties>
 
 
@@ -121,6 +132,25 @@
             <version>${spring.version}</version>
         </dependency>
 
+                        <!--- Hibernate -->
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>${hibernate.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>${hibernate-validator.version}</version>
+        </dependency>
+
+        <!--http://hibernate.org/validator/documentation/getting-started/#unified-expression-language-el-->
+        <dependency>
+            <groupId>org.glassfish</groupId>
+            <artifactId>javax.el</artifactId>
+            <version>${javax-el.version}</version>
+            <scope>provided</scope>
+        </dependency>
 
                             <!--Test-->
         <dependency>
@@ -144,12 +174,18 @@
             <scope>test</scope>
         </dependency>
 
-
                         <!--PostgreSQL-->
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <version>${postgresql.version}</version>
+        </dependency>
+
+                        <!--HSQLDB-->
+        <dependency>
+            <groupId>org.hsqldb</groupId>
+            <artifactId>hsqldb</artifactId>
+            <version>${hsqldb.version}</version>
         </dependency>
 
 
