--- a/src/main/resources/db/postgres.properties
+++ b/src/main/resources/db/postgres.properties
@@ -1,8 +1,10 @@
 database.url=jdbc:postgresql://localhost:5432/vote
 database.username=userVote
 database.password=password
+database.driverClassName=org.postgresql.Driver
 
 database.init=true
+jdbc.initLocation=classpath:db/createDB.sql
 jpa.showSql=true
 hibernate.format_sql=true
 hibernate.use_sql_comments=true
