--- a/pom.xml
+++ b/pom.xml
@@ -166,7 +166,7 @@
 
         <dependency>
             <groupId>org.springframework</groupId>
-            <artifactId>spring-web</artifactId>
+            <artifactId>spring-webmvc</artifactId>
         </dependency>
 
                             <!--JSP-->
