Transfer functionality from RestaurantServlet to controllers

--- a/config/messages/app.properties
+++ b/config/messages/app.properties
@@ -7,5 +7,19 @@ user.email=Email
 user.roles=Roles
 user.active=Active
 user.registered=Registered
-common.select=Select
+
+
 restaurant.title=Restaurants
+restaurant.add=Add restaurant
+restaurant.vote=Vote
+restaurant.voteCounter=Rating
+restaurant.name=Name
+restaurant.menu=Dish
+restaurant.price=Price
+
+
+common.select=Select
+common.delete=Delete
+common.update=Update
+common.save=Save
+common.cancel=Cancel
