Transfer functionality from RestaurantServlet to controllers
fix bags and make the correct output

--- a/config/messages/app.properties
+++ b/config/messages/app.properties
@@ -11,11 +11,18 @@ user.registered=Registered
 
 restaurant.title=Restaurants
 restaurant.add=Add restaurant
+restaurant.edit=Edit
 restaurant.vote=Vote
 restaurant.voteCounter=Rating
 restaurant.name=Name
 restaurant.menu=Dish
 restaurant.price=Price
+restaurant.dish1=Dish #1
+restaurant.price1=Price #1
+restaurant.dish2=Dish #2
+restaurant.price2=Price #2
+restaurant.dish3=Dish #3
+restaurant.price3=Price #3
 
 
 common.select=Select
