--- a/pom.xml
+++ b/pom.xml
@@ -31,8 +31,9 @@
         <spring.version>5.3.13</spring.version>
         <spring-data-jpa.version>2.5.6</spring-data-jpa.version>
         <!--    Tests  -->
-        <junit.version>4.13.2</junit.version>
+        <junit.jupiter.version>5.8.1</junit.jupiter.version>
         <assertj.version>3.21.0</assertj.version>
+        <hamcrest.version>1.3</hamcrest.version>
         <!--    DB  -->
         <postgresql.version>42.3.1</postgresql.version>
         <hsqldb.version>2.6.1</hsqldb.version>
@@ -216,9 +217,16 @@
 
                             <!--Test-->
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>${junit.version}</version>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>${junit.jupiter.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-all</artifactId>
+            <version>${hamcrest.version}</version>
             <scope>test</scope>
         </dependency>
 
