--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,8 @@
         <javax-el.version>3.0.1-b12</javax-el.version>
         <!-- Cache -->
         <ehcache.version>3.9.7</ehcache.version>
+        <!-- JSON -->
+        <jackson.version>2.13.0</jackson.version>
     </properties>
 
 
@@ -267,6 +269,25 @@
             <groupId>org.glassfish.jaxb</groupId>
             <artifactId>jaxb-runtime</artifactId>
             <version>2.4.0-b180830.0438</version>
+        </dependency>
+
+        <!--JSON-->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-hibernate5</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+            <version>${jackson.version}</version>
         </dependency>
 
     </dependencies>
