Bootstrap 4 connect and implement

--- a/config/messages/app.properties
+++ b/config/messages/app.properties
@@ -7,6 +7,8 @@ user.email=Email
 user.roles=Roles
 user.active=Active
 user.registered=Registered
+user.edit=Edit user
+user.add=Add user
 
 
 restaurant.title=Restaurants
@@ -25,6 +27,7 @@ restaurant.dish3=Dish #3
 restaurant.price3=Price #3
 
 
+common.add=Add
 common.select=Select
 common.delete=Delete
 common.update=Update
