AJAX. Datatables. jQuery
implement adding a new user based on the above technologies

--- a/config/messages/app.properties
+++ b/config/messages/app.properties
@@ -2,13 +2,14 @@ app.title=Vote for lunch
 app.home=Home
 app.login=Login as
 user.title=Users
-user.name=Name
+user.login=Name
 user.email=Email
 user.roles=Roles
 user.active=Active
 user.registered=Registered
 user.edit=Edit user
 user.add=Add user
+user.password=Password
 
 
 restaurant.title=Restaurants
@@ -25,6 +26,7 @@ restaurant.dish2=Dish #2
 restaurant.price2=Price #2
 restaurant.dish3=Dish #3
 restaurant.price3=Price #3
+restaurant.choose=Your choose:
 
 
 common.add=Add
