--- a/config/messages/app.properties
+++ b/config/messages/app.properties
@@ -17,8 +17,7 @@ restaurant.add=Add restaurant
 restaurant.edit=Edit
 restaurant.vote=Vote
 restaurant.voteCounter=Rating
-restaurant.name=Name
-restaurant.menu=Dish
+restaurant.menu=See menu
 restaurant.price=Price
 restaurant.dish1=Dish #1
 restaurant.price1=Price #1
