--- a/config/messages/app.properties
+++ b/config/messages/app.properties
@@ -17,16 +17,13 @@ restaurant.add=Add restaurant
 restaurant.edit=Edit
 restaurant.vote=Vote
 restaurant.voteCounter=Rating
-restaurant.menu=See menu
-restaurant.price=Price
-restaurant.dish1=Dish #1
-restaurant.price1=Price #1
-restaurant.dish2=Dish #2
-restaurant.price2=Price #2
-restaurant.dish3=Dish #3
-restaurant.price3=Price #3
 restaurant.choose=Your choose:
 
+
+menu.title=Menu
+menu.dish=Dish
+menu.price=Price
+menu.add=Add menu
 
 common.add=Add
 common.select=Select
