Display additional hints when performing actions on the page

--- a/config/messages/app.properties
+++ b/config/messages/app.properties
@@ -1,5 +1,4 @@
 app.title=Vote for lunch
-app.home=Home
 app.login=Login as
 user.title=Users
 user.login=Name
@@ -14,7 +13,6 @@ user.password=Password
 
 restaurant.title=Restaurants
 restaurant.add=Add restaurant
-restaurant.edit=Edit
 restaurant.vote=Vote
 restaurant.voteCounter=Rating
 restaurant.choose=Your choose:
@@ -27,7 +25,11 @@ menu.add=Add menu
 
 common.add=Add
 common.select=Select
-common.delete=Delete
-common.update=Update
 common.save=Save
 common.cancel=Cancel
+common.deleted=Record deleted
+common.saved=Record saved
+common.enabled=Record enabled
+common.disabled=Record disabled
+common.errorStatus=Error status
+common.confirm=Are you sure?
