Add form for logging

--- a/config/messages/app.properties
+++ b/config/messages/app.properties
@@ -1,4 +1,8 @@
 app.title=Vote for lunch
+app.stackTitle=Application stack:
+app.description=<a href="https://github.com/VitalikZhukov/VotingForLunch">Java Enterprise project</a> with registration / authorization and role-based access rights (USER, ADMIN). \
+Admin could create / edit / delete users, users - manage your profile (vote for the restaurant) via UI (AJAX) and REST with basic authorization. \
+All REST interface covered with JUnit tests by Spring MVC Test \u0438 Spring Security Test.
 app.login=Login as
 user.title=Users
 user.login=Name
