--- a/config/messages/app.properties
+++ b/config/messages/app.properties
@@ -4,6 +4,8 @@ app.description=<a href="https://github.com/VitalikZhukov/VotingForLunch">Java E
 Admin could create / edit / delete users, users - manage your profile (vote for the restaurant) via UI (AJAX) and REST with basic authorization. \
 All REST interface covered with JUnit tests by Spring MVC Test \u0438 Spring Security Test.
 app.login=Login as
+
+
 user.title=Users
 user.login=Name
 user.email=Email
@@ -17,6 +19,7 @@ user.password=Password
 
 restaurant.title=Restaurants
 restaurant.add=Add restaurant
+restaurant.edit=Edit restaurant
 restaurant.vote=Vote
 restaurant.voteCounter=Rating
 restaurant.choose=Your choose:
@@ -26,6 +29,7 @@ menu.title=Menu
 menu.dish=Dish
 menu.price=Price
 menu.add=Add menu
+menu.edit=Edit menu
 
 common.add=Add
 common.select=Select
