Add a profile display in the site header using the interceptor

--- a/config/messages/app.properties
+++ b/config/messages/app.properties
@@ -4,6 +4,7 @@ app.description=<a href="https://github.com/VitalikZhukov/VotingForLunch">Java E
 Admin could create / edit / delete users, users - manage your profile (vote for the restaurant) via UI (AJAX) and REST with basic authorization. \
 All REST interface covered with JUnit tests by Spring MVC Test \u0438 Spring Security Test.
 app.login=Login as
+app.profile=profile
 
 
 user.title=Users
