Add function new user registration

--- a/config/messages/app.properties
+++ b/config/messages/app.properties
@@ -5,6 +5,8 @@ Admin could create / edit / delete users, users - manage your profile (vote for 
 All REST interface covered with JUnit tests by Spring MVC Test \u0438 Spring Security Test.
 app.login=Login as
 app.profile=profile
+app.register=Registration
+app.registered=You are registered. Please Sign in.
 
 
 user.title=Users
