--- a/config/messages/app.properties
+++ b/config/messages/app.properties
@@ -44,3 +44,4 @@ common.enabled=Record enabled
 common.disabled=Record disabled
 common.errorStatus=Error status
 common.confirm=Are you sure?
+common.appError=Application error
