--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,7 @@
         <assertj.version>3.21.0</assertj.version>
         <hamcrest.version>1.3</hamcrest.version>
         <jsonassert.version>1.5.0</jsonassert.version>
+        <json-path.version>2.6.0</json-path.version>
         <!--    DB  -->
         <postgresql.version>42.3.1</postgresql.version>
         <hsqldb.version>2.6.1</hsqldb.version>
@@ -281,6 +282,13 @@
             <groupId>org.skyscreamer</groupId>
             <artifactId>jsonassert</artifactId>
             <version>${jsonassert.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.jayway.jsonpath</groupId>
+            <artifactId>json-path</artifactId>
+            <version>${json-path.version}</version>
             <scope>test</scope>
         </dependency>
 
