--- a/config/messages/app.properties
+++ b/config/messages/app.properties
@@ -45,3 +45,6 @@ common.disabled=Record disabled
 common.errorStatus=Error status
 common.confirm=Are you sure?
 common.appError=Application error
+
+
+exception.user.duplicateEmail=User with this email already exists
