Add function to change language

--- a/config/messages/app.properties
+++ b/config/messages/app.properties
@@ -26,6 +26,7 @@ restaurant.edit=Edit restaurant
 restaurant.vote=Vote
 restaurant.voteCounter=Rating
 restaurant.choose=Your choose:
+restaurant.name=Restaurant name
 
 
 menu.title=Menu
