Add restaurant selection (Part II)
display the user's choice on the page and send it to the server

--- a/config/messages/app.properties
+++ b/config/messages/app.properties
@@ -46,6 +46,7 @@ common.disabled=Record disabled
 common.errorStatus=Error status
 common.confirm=Are you sure?
 common.appError=Application error
+common.voting=You voting for 
 
 
 exception.user.duplicateEmail=User with this email already exists
