--- a/config/messages/app.properties
+++ b/config/messages/app.properties
@@ -46,7 +46,7 @@ common.disabled=Record disabled
 common.errorStatus=Error status
 common.confirm=Are you sure?
 common.appError=Application error
-common.voting=You voting for 
+common.voting=Voted
 
 
 exception.user.duplicateEmail=User with this email already exists
