Add separation of functionality between User and Admin

--- a/config/messages/app.properties
+++ b/config/messages/app.properties
@@ -1,8 +1,9 @@
 app.title=Vote for lunch
 app.stackTitle=Application stack:
 app.description=<a href="https://github.com/VitalikZhukov/VotingForLunch">Java Enterprise project</a> with registration / authorization and role-based access rights (USER, ADMIN). \
-Admin could create / edit / delete users, users - manage your profile (vote for the restaurant) via UI (AJAX) and REST with basic authorization. \
-All REST interface covered with JUnit tests by Spring MVC Test \u0438 Spring Security Test.
+Admin could create / edit / delete users, restaurants and menus, users - manage your profile (vote for the restaurant) via UI (AJAX) and REST with basic authorization. \
+All REST interface covered with JUnit tests by Spring MVC Test \u0438 Spring Security Test. \
+<p>You can vote once a day. At 14-00, the number of votes for the restaurant is automatically reset and it becomes possible to vote again.</p>
 app.login=Login as
 app.profile=profile
 app.register=Registration
